[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cytof-transform"
version = "0.1.0"
description = "CyTOF-transform: sctransform-like normalization for CyTOF / mass-cytometry data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["cytof", "mass cytometry", "normalization", "single cell", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]
dev  = ["pytest>=7", "jupyter", "umap-learn>=0.5"]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/cytof-transform"
Repository = "https://github.com/YOUR_USERNAME/cytof-transform"
Issues     = "https://github.com/YOUR_USERNAME/cytof-transform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cytof_transform*"]
